fix: Scroll back to top when move to next question in Map page
improvement: Change App.js to jsx
test: Add prop types check to multiple files
feat: Now support customize tileURL, tileAttribution, bounds, minZoom,
maxZoom to change map tile, bounds and zoom level
feat: HTML title change to survey title when in the survey
feat: Drawing button will now disabled and change to drawing when in
drawing
style: Move some css from index.html to App.css
refactor: Move QuestionPanel out of MapQuestion component
style: Add whiteSpace: initial to titleRender, so title will perform
line break when too long.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,6 +5,14 @@ html, body, #root, .App, .mapContainer {
     height: 100%;
 }
 
+body, .mapContainer {
+    overflow: hidden;
+}
+
+#root, .pageContainer, .side {
+    overflow: auto;
+}
+
 .pageContainer {
     margin: auto;
     max-width: 900px;
@@ -19,7 +27,7 @@ html, body, #root, .App, .mapContainer {
     flex-wrap: wrap-reverse;
 }
 
-.sider {
+.side {
     width: 400px;
     height: 100%;
 }
@@ -31,13 +39,17 @@ html, body, #root, .App, .mapContainer {
 }
 
 @media screen and (max-width: 1000px) {
-    .sider, .map {
+    .mapContainer {
+        overflow: auto;
+    }
+    .side, .map {
         width: 100%;
     }
     .map {
         height: 55%;
     }
-    .sider {
+    .side {
         height: 45%;
+        overflow: initial;
     }
 }
